# momohomes

./: .gitignore  COMPLETE_ALGORITHM_SPECIFICATION.md  FINAL_ACCURATE_ANALYSIS.md  FINAL_TEST_SUMMARY.md  HOW_TO_RUN.md  HUNDRED_FLAG_MEASUREMENT_FIX.md  HUNDRED_PERCENT_FIXES_SUMMARY.md  HUNDRED_PERCENT_FLOOR_PLAN_INTEGRATION.md  HUNDRED_PERCENT_SYSTEM_README.md  IMPROVEMENTS_SUMMARY.md  README.md  README_USAGE.md  SYSTEM_DOCUMENTATION.md  SYSTEM_PRINCIPLES.md  VISUALIZATION_IMPROVEMENTS.md  VISUALIZATION_UPDATES_SUMMARY.md  advanced_packing.py  analysis.md  analyze_luna_extraction.py  area_calculator.py  automated_cassette_system.py  backtracking_optimizer.py  bb_bounding_functions.py  bb_constraint_learning.py  bb_constraint_model.py  bb_constraint_propagation.py  bb_cutting_planes.py  bb_search_strategies.py  bb_search_tree.py  bb_symmetry_breaking.py  blf_backtracking.py  blf_lookahead.py  blf_optimizer.py  bottleneck_analysis.py  boundary_detector.py  bungalow_complete_test_results.json  bungalow_modular_results.json  cardinal_edge_detector.py  cardinal_edge_mapper.py  cardinal_polygon_reconstructor.py  (+144 more)
--hundred/: results_hundred.json
bungalow_test_output/: results_cardinal.json
data/: optimization_history.json
final_test_output/: results_cardinal.json
luna_cardinal_output/: results_cardinal.json
luna_output/: results.json
luna_test_l_shape/: results_cardinal.json
test_annotated/: results_cardinal.json
test_perfect_closure_output/: results_cardinal.json
webapp/: README.md  app.py  edge_processor.py  flask_log.txt
webapp/templates/: index.html  (+1 more)
(+9 files in other folders)
